# Orion-Agent

./: LICENSE  README.md  code_snippet.txt  pyproject.toml  requirements.txt
orionagent/: agents.py  app.py  plot.py
orionagent/agents/: agent.py  data.py  orchestrator.py  utils.py
orionagent/rag/: documents.py  embeddings.py
